--- a/templates/tester/signup.html
+++ b/templates/tester/signup.html
@@ -28,23 +28,22 @@
 		</nav>
 
 		<main>
-			<form action="#" id="formReg">
+			<form action="#" id="formLogin">
 				<p>
-					<label for="logun">Введіть логін:</label>
-					<input id="login" type="text" placeholder="Введіть логін:" title="Введіть логін. Приклад: vasya228" required autofocus>
+					<label for="login">Введіть логін:</label>
+					<input id="login" type="text" placeholder="Введи логін" title="Введіть логін. Приклад: vasya228" required autofocus>
 				</p>
 				<p>
 					<label for="pass">Введіть пароль:</label>
-					<input name = "pass" id="pass" type="password" placeholder="Введіть пароль" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Латыница + нижний регистр + верхний регистр + цифры,  без спецсимволов. Пример: asd12GDew" required>
+					<input name = "pass" id="pass" type="password" placeholder="І пароль тоже" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Латиниця + нижній регістр + верхній регістр + цифри,  без спецсимволів. Пример: asd12GDew" required>
 				</p>
 				<p>
 					<label for="pass1">Повторіть пароль:</label>
-					<input name="pass1" id="pass1" type="password" placeholder="Повторите пароль" title="Латыница + нижний регистр + верхний регистр + цифры,  без спецсимволов. Пример: asd12GDew" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" required>
+					<input name="pass1" id="pass1" type="password" placeholder="Пароль ще раз" title="Латиниця + нижній регістр + верхній регістр + цифри,  без спецсимволів. Пример: asd12GDew" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" required>
 				</p>
 				<p>
 					<input type="submit" value="Зареєструватись" id="submit" class="Submit">
 				</p>
-
 			</form>
 		</main>
 
