--- a/static/general/css/style.css
+++ b/static/general/css/style.css
@@ -53,7 +53,7 @@ header {
 
 
 .navtop {
-	background: rgba(0,0,0, .8);
+	background: #202020;
 }
 
 
@@ -72,8 +72,7 @@ footer {
 	background-color: #202020;
 	text-align: center;
 	font-size: 20px;
-/*	height: 200px;
-*/	color: #fff;
+	color: #fff;
 	padding: 80px 20px 70px 20px;
 }
 
@@ -115,23 +114,18 @@ label {
 
 select, input {
 	padding-left: 15px;
-    /*
-	border-radius: 0 10px 10px 0;
-    */
+
 	width: 250px;
-   background: #ffffff;
+    background: #ffffff;
 	border: 2px solid black;
 	color: #000;
-	/*color: gold;*/
-/*	color: rgba(255, 255, 255, 1);
-*/	border-left: none;
+	border-left: none;
 	margin: 10px 0px;
 }
 
 
 option {
-/*	background: rgb(255,255,255);
-	background: rgba(0, 0, 0, .1);*/
+
 }
 
 form {
