--- a/templates/tester/signin.html
+++ b/templates/tester/signin.html
@@ -38,7 +38,7 @@
 					<input name = "pass" id="pass" type="password" placeholder="Введіть пароль" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Латиниця + нижній регістр + верхній регістр + цифри,  без спецсимволів. Пример: asd12GDew" required>
 				</p>
 				<p>
-					<input type="submit" value="Вхід" id="submit" class="Submit">
+					<input type="submit" value="ВХІД" id="submit" class="Submit">
 				</p>
 			</form>
         </main>
