--- a/templates/tester/signup.html
+++ b/templates/tester/signup.html
@@ -42,7 +42,7 @@
 					<input name="pass1" id="pass1" type="password" placeholder="Пароль ще раз" title="Латиниця + нижній регістр + верхній регістр + цифри,  без спецсимволів. Пример: asd12GDew" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" required>
 				</p>
 				<p>
-					<input type="submit" value="Зареєструватись" id="submit" class="Submit">
+					<input type="submit" value="ЗАРЕЄСТРУВАТИСЬ" id="submit" class="Submit">
 				</p>
 			</form>
 		</main>
@@ -52,4 +52,4 @@
 		</footer>
 	</div>
 </body>
-</html>
+</html>S
