--- a/static/general/css/style.css
+++ b/static/general/css/style.css
@@ -151,9 +151,14 @@ form {
 
 
 /* Картинки для зв'зку */
-.SocNet {
-	width: 50px;
+.SocNet1 {
+	width: 40px;
 	height: 50px;
 	border: none;
 	margin-top: 20px;
+}
+.SocNet2 {
+	width: 50px;
+	height: 50px;
+	border: none;
 }
