--- a/templates/tester/test.html
+++ b/templates/tester/test.html
@@ -57,9 +57,9 @@
                 <input id="runTest" type="submit" value="TEST" class="Submit">
                 <input id="randomServer" type="submit" value="МЕНІ ПОВЕЗЕ!" class="Submit">
                 <br>
-                <a href="#"><img class="SocNet" src="{% static 'general/image/upload.png' %}" alt=":("></a>
+                <a href="#"><img class="SocNet1" src="{% static 'general/image/download.svg' %}" alt=":("></a>
                 <p id="download" class="Event Pading" >Середня швидкість скачування: </p>
-                <a href="#"><img class="SocNet" src="{% static 'general/image/download.svg' %}" alt=":("></a>
+                <a href="#"><img class="SocNet2" src="{% static 'general/image/upload.png' %}" alt=":("></a>
                 <p id="upload" class="Event Pading">Середня швидкість завантаження: </p>
                 <p id="event" class="Event"></p>
             </form>
