--- a/templates/tester/test.html
+++ b/templates/tester/test.html
@@ -29,6 +29,7 @@
 
         <main>
             <form action="{% static '' %}" id="form">
+                {% csrf_token %}
                 <label for="size">Виберіть розмір:</label>
                 {% comment %}
                 <input name="size" type="text" list="sizeSelector" id="size" autocomplete="off" required>
