--- a/templates/tester/test.html
+++ b/templates/tester/test.html
@@ -55,13 +55,13 @@
                     <option id = "1"value="http://speedtest.point.lviv.ua/speedtest/">Lviv PointNet</option>
                 </select>
 
-                <input id="runTest" type="submit" value="TEST" class="Submit">
+                <input id="runTest" type="submit" value="ТЕСТ" class="Submit">
                 <input id="randomServer" type="submit" value="МЕНІ ПОВЕЗЕ" class="Submit">
                 <br>
                 <a href="#"><img class="SocNet1" src="{% static 'general/image/download.svg' %}" alt=":("></a>
-                <p id="download" class="Event" >Середня швидкість скачування: </p>
+                <p id="download" class="Event" >Середня швидкість завантаження: </p>
                 <a href="#"><img class="SocNet2" src="{% static 'general/image/upload.png' %}" alt=":("></a>
-                <p id="upload" class="Event">Середня швидкість завантаження: </p>
+                <p id="upload" class="Event">Середня швидкість вивантаження: </p>
                 <p id="event" class="Event"></p>
             </form>
 
