--- a/templates/tester/history.html
+++ b/templates/tester/history.html
@@ -21,10 +21,10 @@
         </header>
 
        <nav class="NavTop">
-            <a href="../test"><b>Головна</b></a>
-            <a href="../history" class="navtop"><b>Історія</b></a>
-            <a href="../signup"><b>Реєстрація</b></a>
-            <a href="../signin"><b>Увійти</b></a>
+            <a href="../test"><b>ГОЛОВНА</b></a>
+            <a href="../history" class="navtop"><b>ІСТОРІЯ</b></a>
+            <a href="../signup"><b>РЕЄСТРАЦІЯ</b></a>
+            <a href="../signin"><b>УВІЙТИ</b></a>
         </nav>
 
         <main>
