--- a/templates/tester/signin.html
+++ b/templates/tester/signin.html
@@ -21,26 +21,26 @@
         </header>
 
         <nav class="NavTop">
-            <a href="../test"><b>Головна</b></a>
-            <a href="../history"><b>Історія</b></a>
-            <a href="../signup"><b>Реєстрація</b></a>
-            <a href="../signin" class="navtop"><b>Увійти</b></a>
+            <a href="../test"><b>ГОЛОВНА</b></a>
+            <a href="../history"><b>ІСТОРІЯ</b></a>
+            <a href="../signup"><b>РЕЄСТРАЦІЯ</b></a>
+            <a href="../signin" class="navtop"><b>УВІЙТИ</b></a>
         </nav>
 
         <main>
             <form action="#" id="formReg">
-				<p>
-					<label for="logun">Введіть логін:</label>
-					<input id="login" type="text" placeholder="Введіть логін:" title="Введіть логін. Приклад: vasya228" required autofocus>
-				</p>
-				<p>
-					<label for="pass">Введіть пароль:</label>
-					<input name = "pass" id="pass" type="password" placeholder="Введіть пароль" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Латиниця + нижній регістр + верхній регістр + цифри,  без спецсимволів. Пример: asd12GDew" required>
-				</p>
-				<p>
-					<input type="submit" value="ВХІД" id="submit" class="Submit">
-				</p>
-			</form>
+        <p>
+          <label for="logun">ВВЕДІТЬ ЛОГІН:</label>
+          <input id="login" type="text" placeholder="Введіть логін:" title="Введіть логін. Приклад: vasya228" required autofocus>
+        </p>
+        <p>
+          <label for="pass">ВВЕДІТЬ ПАРОЛЬ:</label>
+          <input name = "pass" id="pass" type="password" placeholder="Введіть пароль" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?!.*\s).*$" title="Латиниця + нижній регістр + верхній регістр + цифри,  без спецсимволів. Пример: asd12GDew" required>
+        </p>
+        <p>
+          <input type="submit" value="ВХІД" id="submit" class="Submit">
+        </p>
+      </form>
         </main>
 
         <footer>
