--- a/templates/tester/signin.html
+++ b/templates/tester/signin.html
@@ -28,7 +28,7 @@
         </nav>
 
         <main>
-            <form action="#" id="formReg">
+            <form action="{% static '' %}" class="Forms" id="formReg">
         <p>
           <label for="logun">ВВЕДІТЬ ЛОГІН:</label>
           <input id="login" type="text" placeholder="Введіть логін:" title="Введіть логін. Приклад: vasya228" required autofocus>
