--- a/templates/tester/signup.html
+++ b/templates/tester/signup.html
@@ -28,7 +28,7 @@
     </nav>
 
     <main>
-      <form action="#" id="formLogin">
+      <form action="{% static '' %}" class="Forms" id="formLogin">
         <p>
           <label for="login">ВВЕДІТЬ ЛОГІН:</label>
           <input id="login" type="text" placeholder="Введи логін" title="Введіть логін. Приклад: vasya228" required autofocus>
