--- a/static/general/css/style.css
+++ b/static/general/css/style.css
@@ -139,7 +139,7 @@ option {
 
 }
 
-form {
+.Forms {
   width: 500px;
   margin: 0 auto;
 }
@@ -186,4 +186,20 @@ figure {
   display: block;
     margin-top: 20px;
 
+}
+
+.formReg {
+  width: 710px;
+  margin: 0 auto;
+}
+
+textarea {
+  border: 2px dashed red;
+  overflow: auto;
+}
+
+.pHistory {
+  text-align: center;
+  font-size: 20px;
+  font-weight: bolder;
 }
