--- a/templates/tester/test.html
+++ b/templates/tester/test.html
@@ -28,7 +28,7 @@
         </nav>
 
         <main>
-            <form action="{% static '' %}" id="form">
+            <form action="{% static '' %}" class="Forms" id="form">
                 {% csrf_token %}
                 <label for="size">ВИБЕРІТЬ РОЗМІР:</label>
                 {% comment %}
