--- a/templates/tester/history.html
+++ b/templates/tester/history.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="{% static 'general/image/spid.png' %}" type="image/x-icon">
     <script src="{% static 'general/js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'tester/js/loader.js' %}"></script>
+    <script src="{% static 'tester/js/history.js' %}"></script>
 </head>
 
 <body>
